--- a/index.html
+++ b/index.html
@@ -3,9 +3,107 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <div class="container">
+      <div class="column-info">
+        <h1 class="name">YOUR NAME</h1>
+        <p class="job">UI/UX DESIGNER</p>
+        <div class="about-me">
+          <div class="avatar">
+            <p>PLACE YOUR IMAGE HERE</p>
+          </div>
+          <div class="description">
+            <p>ABOUT ME</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatem quia tenetur quae rem, nisi culpa. Quisquam ad debitis
+              excepturi non libero maiores sequi, distinctio, deleniti illo
+              magnam provident voluptatum minus.
+            </p>
+          </div>
+        </div>
+        <div class="infos">
+          <div class="infos-item">
+            <img src="img/phone.svg" />
+            <p>0123 4567 8900</p>
+          </div>
+          <div class="infos-item">
+            <img src="img/clarity_email-solid.svg" />
+            <p>name@website.com</p>
+          </div>
+          <div class="infos-item">
+            <img src="img/whh_website.svg" />
+            <p>www.website.com</p>
+          </div>
+          <div class="infos-item">
+            <img src="img/fa-solid_home.svg" />
+            <p>street no #0, city</p>
+          </div>
+        </div>
+        <div class="languages">
+          <p>LANGUAGES</p>
+          <div class="languages-item">
+            <p>English</p>
+            <div class="score">
+              <div class="bullet fill"></div>
+              <div class="bullet fill"></div>
+              <div class="bullet fill"></div>
+              <div class="bullet fill"></div>
+              <div class="bullet fill"></div>
+            </div>
+          </div>
+          <div class="languages-item">
+            <p>Russian</p>
+            <div class="score">
+              <div class="bullet fill"></div>
+              <div class="bullet fill"></div>
+              <div class="bullet fill"></div>
+              <div class="bullet fill"></div>
+              <div class="bullet fill"></div>
+            </div>
+          </div>
+          <div class="languages-item">
+            <p>French</p>
+            <div class="score">
+              <div class="bullet fill"></div>
+              <div class="bullet fill"></div>
+              <div class="bullet fill"></div>
+              <div class="bullet fill"></div>
+              <div class="bullet"></div>
+            </div>
+          </div>
+          <div class="languages-item">
+            <p>Italian</p>
+            <div class="score">
+              <div class="bullet fill"></div>
+              <div class="bullet fill"></div>
+              <div class="bullet fill"></div>
+              <div class="bullet"></div>
+              <div class="bullet"></div>
+            </div>
+          </div>
+          <div class="languages-item">
+            <p>German</p>
+            <div class="score">
+              <div class="bullet fill"></div>
+              <div class="bullet fill"></div>
+              <div class="bullet"></div>
+              <div class="bullet"></div>
+              <div class="bullet"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="column-courses">
+        <div class="course-item">
+          <div class="course-title">
+            <h2>EDUCATION</h2>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
