--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
             <p>0123 4567 8900</p>
           </div>
           <div class="infos-item">
-            <img src="img/clarity_email-solid.svg" />
+            <img src="img/email.svg" />
             <p>name@website.com</p>
           </div>
           <div class="infos-item">
-            <img src="img/whh_website.svg" />
+            <img src="img/website.svg" />
             <p>www.website.com</p>
           </div>
           <div class="infos-item">
-            <img src="img/fa-solid_home.svg" />
+            <img src="img/home.svg" />
             <p>street no #0, city</p>
           </div>
         </div>
