--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Intégration CV</title>
   </head>
   <body>
     <div class="container">
@@ -18,10 +18,9 @@
           <div class="description">
             <p>ABOUT ME</p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quia tenetur quae rem, nisi culpa. Quisquam ad debitis
-              excepturi non libero maiores sequi, distinctio, deleniti illo
-              magnam provident voluptatum minus.
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              ndustry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s,
             </p>
           </div>
         </div>
@@ -101,6 +100,107 @@
         <div class="course-item">
           <div class="course-title">
             <h2>EDUCATION</h2>
+          </div>
+          <div class="course-content">
+            <p class="course-bold-title">
+              <strong>Master in user experience design</strong> (2012)
+            </p>
+            <p class="course-subtitle">ABC University</p>
+            <p class="course-description">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard
+            </p>
+          </div>
+          <div class="course-content">
+            <p class="course-bold-title">
+              <strong>Master in Multimedia design</strong> (2009)
+            </p>
+            <p class="course-subtitle">XYZ University</p>
+            <p class="course-description">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard
+            </p>
+          </div>
+        </div>
+        <div class="course-item">
+          <div class="course-title">
+            <h2>EXPERIENCE</h2>
+          </div>
+          <div class="course-content">
+            <p class="course-subtitle">Senior UX Designer</p>
+            <p class="course-description">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard
+            </p>
+          </div>
+          <div class="course-content">
+            <p class="course-subtitle">UI/UX Designer</p>
+            <p class="course-description">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard
+            </p>
+          </div>
+        </div>
+        <div class="course-item">
+          <div class="course-title">
+            <h2>MY SKILLS</h2>
+          </div>
+          <div class="course-content">
+            <div class="skills-grid">
+              <div class="grid-item">
+                <div class="circle">
+                  <img src="img/adobe_photoshop.svg" />
+                  <div class="progress-bar"></div>
+                </div>
+                <p>Adobe Photoshop</p>
+              </div>
+              <div class="grid-item">
+                <div class="circle">
+                  <img src="img/adobe_illustrator.svg" />
+                  <div class="progress-bar"></div>
+                </div>
+                <p>Adobe Illustrator</p>
+              </div>
+              <div class="grid-item">
+                <div class="circle">
+                  <img src="img/adobe_inDesign.svg" />
+                  <div class="progress-bar"></div>
+                </div>
+                <p>Adobe InDesign</p>
+              </div>
+              <div class="grid-item">
+                <div class="circle">
+                  <img src="img/adobe_xd.svg" />
+                  <div class="progress-bar"></div>
+                </div>
+                <p>Adobe XD</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="course-item">
+          <div class="course-title">
+            <h2>HOBBIES</h2>
+          </div>
+          <div class="course-content">
+            <div class="hobbies-grid">
+              <div class="grid-item">
+                <img src="img/books.svg" />
+                <p>Reading Books</p>
+              </div>
+              <div class="grid-item">
+                <img src="img/basketball.svg" />
+                <p>Basket Ball</p>
+              </div>
+              <div class="grid-item">
+                <img src="img/hiking.svg" />
+                <p>Hiking</p>
+              </div>
+              <div class="grid-item">
+                <img src="img/music.svg" />
+                <p>Listen Music</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
